# bluestar

./: .env copy  .gitignore  BlueStar_Development_Process.md  COMMIT_ANALYZER_EVALUATION.md  GUI_Implementation_Plan.md  LangGraph_Architecture.md  Progressive_Context_Enhancement_Plan.md  README.md  chatgpt_mock_example.py  context_enhancement_plans.md  devnote.md  main.py  mock_explanation_demo.py  perfomance_metrics.md  pyproject.toml  recc.md  test_real_github_api.py  test_tracing_basic.py
.cursor/rules/: cursor-rules.mdc
documentation/: HIL_Refinement_Loop_Design.md  github_client.md
evals/: DATASET_PLAN.md  EVALUATION_LOG.md  EVALUATION_PLAN.md  create_dataset.py  evaluation_fail_cases.md  evaluators.py  run_eval.py
example/: readme.md
src/bluestar/: __init__.py  cli.py  config.py  main.py
src/bluestar/agents/: __init__.py  graph.py  state.py
src/bluestar/core/: __init__.py  exceptions.py  llm.py  tracing.py
src/bluestar/formats/: __init__.py  blog_formats.py  commit_data.py  llm_outputs.py
src/bluestar/nodes/: __init__.py
src/bluestar/prompts/: __init__.py  commit_analysis.py  initial_generation.py  refinement_generation.py
tests/: __init__.py  conftest.py  test_config.py  test_core_context.py  test_core_context_real.py  test_enhanced_commit_fetcher.py  test_github_client.py  test_llm.py
tests/graph/: test_commit_analyzer.py  test_commit_analyzer_real_api.py  test_commit_analyzer_structure.md  test_commit_fetcher.py  test_content_synthesizer.py  test_e2e_workflow.py  test_human_refinement.py  test_input_validator.py  test_publishing_decision.py
(+20 files in other folders)
