[project]
name = "bluestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface>=0.0.1",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.4.8",
    "mypy>=1.16.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.2.1",
    "pytest-parametrize>=1.4.0",
    "langsmith>=0.3.45",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
